@@ -15,7 +15,7 @@ for C++ Project
 Page on Sourceforge</a>
 </span> &nbsp;|
 <span>Last Published:
-2025-12-01</span> &nbsp;|</div>
+2025-12-12</span> &nbsp;|</div>
 <hr class="delimiter">
 <div id="projectpage">
 <div id="navigationpanel" class="lightbackground">
@@ -622,19 +622,19 @@ Log file A3.log is rolled over as soon as it reaches limit of 200 bytes, 1 backu
 <p>
 Log4cpp is moved to git <a href="https://sourceforge.net/p/log4cpp/codegit/">SourceForge Git page</a> since version 1.1.1, CVS repo is stale now.
 </p>
-	Each release will receive a tag named REL_x_y_z.
-	<p></p>
-	<p>The project uses <a href="https://www.gnu.org/software/automake/">GNU Autotools</a> build system.
+	<p>A mirror of the Git repository is also available on GitHub: <a
+			href="https://github.com/log4cpp/log4cpp">https://github.com/log4cpp/log4cpp</a></p>
+	<p>
 		To start working with a freshly checked out log4cpp repository, run <b><code>./autogen.sh</code></b>
 		first. This will create <code>./configure</code> and the necessary <code>Makefile.in</code>'s.
-		You'll need at least autoconf 2.50, automake 1.6.0 and libtool 1.4.
+		You'll need at least autoconf 2.50, automake 1.6.0 and libtool 1.4 (<a href="https://www.gnu.org/software/automake/">GNU Autotools</a> build system).
 	</p>
 	<p>Log4cpp of older versions (prior to version 1.1.1) is available also with CVS, see the <a href="https://sourceforge.net/p/log4cpp/code/">SourceForge CVS page</a> for instructions.</p>
 	<small>
 		CVS had two branches:
 		<table>
 			<tbody><tr><td>MAIN</td><td>for log4cpp development</td></tr>
-			<tr><td>BRANCH_MAINT_0_2</td><td>for maintainance of log4cpp-stable (0.2.x)</td></tr>
+			<tr><td>BRANCH_MAINT_0_2</td><td>for maintenance of log4cpp-stable (0.2.x)</td></tr>
 			</tbody></table><br>
 	</small>
 	<a href="#begin">^</a>
@@ -645,6 +645,7 @@ Log4cpp is moved to git <a href="https://sourceforge.net/p/log4cpp/codegit/">Sou
 <p>
 WARNING: releases from the development branch are a 'work in progress' and may fail to build, crash or redecorate your desktop.
 </p>
+	<p>Each release will receive a tag named REL_x_y_z or prefixed with REL_x.y.z</p>
 <small>
 
 <dl>
